=== HEAD

* Cache SELECT SQL for most frozen datasets (jeremyevans)

* Freeze most SQL::Expression objects and internal state by default (jeremyevans)

* Freeze Dataset::PlaceholderLiteralizer and Dataset::PlaceholderLiteralizer::Argument instances (jeremyevans)

* Freeze most dataset opts values to avoid unintentional modification (jeremyevans)

* Add Dataset#with_convert_smallint_to_bool on DB2, returning a clone with convert_smallint_to_bool set (jeremyevans)

* Make Dataset#freeze actually freeze the dataset on ruby 2.4+ (jeremyevans)

* Avoid using instance variables other than @opts for dataset data storage (jeremyevans)

* Add freeze_datasets extension, making all datasets for a given Database frozen (jeremyevans)

* Refactor prepared statement internals, using opts instead of instance variables (jeremyevans)

* Model.set_dataset now operates on a clone of the dataset given instead of modifying it, so it works with frozen datasets (jeremyevans)

=== 4.41.0 (2016-12-01)

* Add Dataset#with_mssql_unicode_strings on Microsoft SQL Server, returning a clone with mssql_unicode_strings set (jeremyevans)

* Add Dataset#with_identifier_output_method, returning a clone with identifier_output_method set (jeremyevans)

* Add Dataset#with_identifier_input_method, returning a clone with identifier_input_method set (jeremyevans)

* Add Dataset#with_quote_identifiers, returning a clone with quote_identifiers set (jeremyevans)

* Add Dataset#with_extend, returning a clone extended with given modules (jeremyevans)

* Add Dataset#with_row_proc, returning a clone with row_proc set (jeremyevans)

* Support use of SQL::AliasedExpressions as Model#to_json :include option keys in the json_serializer plugin (sensadrome) (#1269)

* Major improvements to type conversion in the ado adapter (vais, jeremyevans) (#1265)

* Avoid memory leak in ado adapter by closing result sets after yielding them (vais, jeremyevans) (#1259)
